--- a/Frontend/Components/Layout/NavMenu.razor
+++ b/Frontend/Components/Layout/NavMenu.razor
@@ -25,6 +25,20 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
             </NavLink>
         </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="addstudent">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Add Student
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="students">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Student Record
+            </NavLink>
+        </div>
+
+      
     </nav>
 </div>
 
